@@ -3,6 +3,10 @@ X3 ChangeLog
 
 2009-10-09  Henrik Stuart <evilnet@hstuart.dk>
 
+	* src/mod-python.c: add emb_timeq_del function.
+
+2009-10-09  Henrik Stuart <evilnet@hstuart.dk>
+
 	* src/mod-python.c: add emb_timeq_add function.
 
 2009-10-07  Henrik Stuart <evilnet@hstuart.dk>
